services/frontend/src/app/material/components/dialog.scss
@use 'sass:map';
@use '@angular/material' as mat;

@mixin color($theme, $overlay, $background) {
  $primary-palette: map.get($theme, 'primary');
  $primary-color: mat.get-color-from-palette($primary-palette, 500);
  $on-surface: mat.get-color-from-palette($primary-palette, '50-contrast');
  $on-surface-high: rgba($on-surface, .87);

  .cdk-overlay-dark-backdrop {
    background: $overlay;
  }

  .mat-dialog-container {
    .mat-dialog-header {

      .mat-icon-button {
        background: $background;
        color: $on-surface-high;
      }
    }
  }
}

@mixin layout() {
  .mat-dialog-container {
    border-radius: 24px;
    padding: 0px;
    max-width: 584px;
    min-width: 384px;
    overflow: hidden;
  }

  .setting-dialog .mat-dialog-container {
    margin-top: 16px;
    margin-bottom: 16px;
    width: 384px;
    height: auto;
  }

  .mat-dialog-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 42px;
    padding-bottom: 16px;
  }

  .mat-dialog-actions {
    margin-bottom: 35px;
    margin-top: 16px;
    margin-left: 30px;
    margin-right: 30px;
  }

  .mat-dialog-content {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    flex: auto;
    overflow: auto;

    .mat-form-field {
      margin-bottom: -1.25em;
      width: 100%;
    }

  }
}

@mixin theme($theme, $overlay, $background) {
  @include color($theme, $overlay, $background);
  @include layout();
}

